Resolve more accessibility issues
- Buttons/tabs should not have colored text that is too light, instead
  use outline and adjust foreground and background when hovering
- Make details table background white to ensure readability of links

--- a/res/main.scss
+++ b/res/main.scss
@@ -131,8 +131,28 @@ body {
         width: 100%;
     }
 
-    &.is-toggle li:only-child a {
-        border-radius: 4px 4px 4px 4px;
+    &.is-toggle {
+        li {
+            /* Do something with colors */
+            @each $name, $pair in $colors {
+                $color: nth($pair, 1);
+                $color-invert: nth($pair, 2);
+                &:not(:last-child) a.is-#{$name} {
+                    border-right-width: 2px;
+                }
+                a.is-#{$name} {
+                    border-color: $color;
+                    color: $black;
+                    &:hover {
+                        background-color: $color;
+                        color: $color-invert;
+                    }
+                }
+            }
+        }
+        li:only-child a {
+            border-radius: 4px 4px 4px 4px;
+        }
     }
     .tag {
 	    background-color: #ffffff;
